[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenarios/World/map_color.png" type="Texture" id=1]
[ext_resource path="res://Assets/water.png" type="Texture" id=2]
[ext_resource path="res://Src/Map/Map2D.gd" type="Script" id=3]
[ext_resource path="res://Src/Map/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://Scenarios/World/map_base.png" type="Texture" id=5]

[node name="Map2D" type="Node2D"]
script = ExtResource( 3 )

[node name="MapPixelRead" type="Sprite" parent="."]
modulate = Color( 0.6, 0.6, 0.6, 1 )
texture = ExtResource( 1 )

[node name="MapBase" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="CountryHolder" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 4 )

[node name="Water" type="Sprite" parent="Camera2D"]
scale = Vector2( 3, 3 )
z_index = -5
texture = ExtResource( 2 )

[node name="Hud" type="CanvasLayer" parent="."]
layer = 2

[node name="ValidMouseClickOverlay" type="Control" parent="Hud"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="Hud"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Hud"]
margin_left = 0.00256348
margin_top = 667.479
margin_right = 220.003
margin_bottom = 832.479
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Hud/Panel"]
margin_right = 40.0
margin_bottom = 14.0
text = "Text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Hud/Panel"]
margin_top = 19.0
margin_right = 40.0
margin_bottom = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Hud/Panel"]
margin_top = 39.0
margin_right = 40.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Hud/Panel"]
margin_left = 148.332
margin_top = 1.49832
margin_right = 217.332
margin_bottom = 21.4983
text = "Highlight"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Hud/ValidMouseClickOverlay" to="." method="_on_ValidMouseClickOverlay_gui_input"]
[connection signal="button_up" from="Hud/Panel/Button" to="." method="_on_Button_button_up"]
